--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -2,8 +2,7 @@ pull_request_rules:
   - name: Automated merge for Renovate pull requests
     conditions:
       - author=renovate[bot]
-      - status-success=build (14.x)
-      - status-success=lint (14.x)
+      - status-success=build
     actions:
       merge:
         method: merge
@@ -13,8 +12,7 @@ pull_request_rules:
   - name: Automated dependabot merge pull requests
     conditions:
       - author~=^dependabot(|-preview)\[bot\]$
-      - status-success=build (14.x)
-      - status-success=lint (14.x)
+      - status-success=build
     actions:
       merge:
         method: merge
