--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -2,7 +2,8 @@ pull_request_rules:
   - name: Automated merge for Renovate pull requests
     conditions:
       - author=renovate[bot]
-      - status-success=build
+      - status-success=build (14.x)
+      # - status-success=heroku
     actions:
       merge:
         method: merge
@@ -12,7 +13,8 @@ pull_request_rules:
   - name: Automated dependabot merge pull requests
     conditions:
       - author~=^dependabot(|-preview)\[bot\]$
-      - status-success=build
+      - status-success=build (14.x)
+      # - status-success=heroku
     actions:
       merge:
         method: merge
