ci: fix missing install dependencies in client folder

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: Install dependencies
+      - name: Install serve dependencies
         run: yarn install
+      - run: yarn --cwd client install
 
       - name: Build client
         run: yarn --cwd client build
